# nymphaea-ide

./: .gitattributes  .gitignore  README.md
nymphaea_pty_ide/: README.md  index.html  language-runtime-patch.diff  package-lock.json  package.json  vite.config.ts
nymphaea_pty_ide/examples/: girdi_demo.ny
nymphaea_pty_ide/scripts/: add-30-themes.cjs  add-sidebar-temalar.cjs  button-png-logo.cjs  fix-build-ts-errors.cjs  fix-tauri-windows-config.cjs  fix-theme-transition.cjs  force-png-logo.cjs  gorunum-settings-menu.cjs  left-tabs-temalar.cjs  prepare-sidecar.mjs  real-search-clean-chips.cjs  rename-app.cjs  rodina-balanced-ui.cjs  rodina-fix-problems-compact.js  rodina-smaller-ui.cjs  use-png-logo.cjs  view-menu-temalar-link.cjs
nymphaea_pty_ide/src/: App.tsx  main.tsx  nyLanguage.ts  styles.css
nymphaea_pty_ide/src-tauri/: .tmpKfUyIp.ny  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
nymphaea_pty_ide/src-tauri/binaries/: ny-x86_64-unknown-linux-gnu.linux
nymphaea_pty_ide/src-tauri/icons/: icon.icns
nymphaea_pty_ide/src-tauri/src/: lib.rs  main.rs
releases/latest/download/: Nymphaea_IDE_1.0.0_x64_en-US.msi
