[package]
name = "nymphaea_tauri_starter"
version = "0.1.0"
description = "Tauri + React + Monaco + PTY terminal starter for the Ny language"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "nymphaea_tauri_starter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tempfile = "3"
thiserror = "2"
